{style} product + fix header wrap

--- a/assets/critical.css
+++ b/assets/critical.css
@@ -257,7 +257,7 @@ textarea {
   width: 4rem;
   height: 4rem;
 }
-.wh-55{
+.wh-55 {
   width: 5.5rem;
   height: 5.5rem;
 }
@@ -322,6 +322,9 @@ textarea {
   .col-md-remaining {
     flex: 0 0 calc(100% - var(--col-width) - var(--gap, 2rem));
     width: calc(100% - var(--col-width) - var(--gap, 2rem));
+  }
+  .mt-md-0 {
+    margin-top: 0;
   }
 }
 @media (min-width: 992px) {
@@ -634,12 +637,12 @@ strong {
   width: calc((100% - var(--gap, 0px) * calc(var(--col) - 1)) / var(--col));
 }
 .cols {
-  margin-left: calc(-.5* var(--col-gap, var(--bs-gutter-x)));
-  margin-right: calc(-.5* var(--col-gap, var(--bs-gutter-x)));
+  margin-left: calc(-0.5 * var(--col-gap, var(--bs-gutter-x)));
+  margin-right: calc(-0.5 * var(--col-gap, var(--bs-gutter-x)));
 }
 .cols > * {
-  padding-inline-start: calc(var(--col-gap, var(--bs-gutter-x))* .5);
-  padding-inline-end: calc(var(--col-gap, var(--bs-gutter-x))* .5);
+  padding-inline-start: calc(var(--col-gap, var(--bs-gutter-x)) * 0.5);
+  padding-inline-end: calc(var(--col-gap, var(--bs-gutter-x)) * 0.5);
 }
 .row-gap-0 {
   row-gap: 0;
