--- a/assets/theme.css
+++ b/assets/theme.css
@@ -187,10 +187,6 @@ a.hover-heading-color:hover {
 .w-50 {
   width: 5rem;
 }
-.wh-55 {
-  width: clamp(3.5rem, 3vw, 5.5rem);
-  height: clamp(3.5rem, 3vw, 5.5rem);
-}
 .max-w-100 {
   max-width: 100%;
 }
@@ -1566,7 +1562,7 @@ a.hover-heading-color:hover {
   }
   .tooltip-content:before {
     border: 5px solid transparent;
-    content: '';
+    content: "";
     height: 0;
     width: 0;
     top: var(--tooltip-y, 100%);
@@ -1656,7 +1652,7 @@ a.hover-heading-color:hover {
 }
 @media screen and (max-width: 767.98px) {
   .collapsible-row__content:not(.filter-content) {
-   height: 0;
+    height: 0;
   }
   .footer .back-to-top {
     bottom: 7.5rem;
@@ -1669,9 +1665,11 @@ a.hover-heading-color:hover {
   margin-bottom: calc(var(--section-spacing) - var(--gutter-x, 0px));
 }
 details > summary .icon {
-  transform-origin: center 3px; 
+  transform-origin: center 3px;
 }
-.detail-open > summary .icon, .details-normal[open] > summary .icon, .button-localization.opened > .icon {
+.detail-open > summary .icon,
+.details-normal[open] > summary .icon,
+.button-localization.opened > .icon {
   transform: rotate(180deg);
   -webkit-transform: rotate(180deg);
 }
@@ -1799,7 +1797,7 @@ details > summary .icon {
   background-color: rgba(255, 255, 255, 0.6);
 }
 
-.button-localization .icon-down{
+.button-localization .icon-down {
   margin-inline-start: 10px;
 }
 @media (min-width: 1025px) {
@@ -1821,7 +1819,7 @@ details > summary .icon {
   .disclosure__footer .button-localization.opened + .disclosure__list-wrapper {
     bottom: calc(100% + 1rem);
   }
-  .button-localization .icon-down{
+  .button-localization .icon-down {
     margin-inline-start: 5px;
   }
 }
@@ -1855,7 +1853,7 @@ details > summary .icon {
     opacity: 1;
     visibility: visible;
   }
-  .disclosure__footer .button-localization.opened + .disclosure__list-wrapper{
+  .disclosure__footer .button-localization.opened + .disclosure__list-wrapper {
     bottom: 0;
   }
 }
@@ -1871,7 +1869,6 @@ details > summary .icon {
   margin-bottom: 1rem;
 }
 
-
 .back-to-top {
   transform: scale(0);
 }
@@ -1886,13 +1883,15 @@ details > summary .icon {
 .mix-blend {
   mix-blend-mode: difference;
 }
-.footer__block-note a, .footer__block-info a{
+.footer__block-note a,
+.footer__block-info a {
   font-weight: var(--heading-weight);
   text-decoration: underline;
 }
 
 .success,
-.warning, .error {
+.warning,
+.error {
   padding: 1.2rem 2rem;
   position: relative;
 }
@@ -1912,9 +1911,9 @@ details > summary .icon {
 }
 .error,
 .message-error {
-  --color-error: #CD3B32;
-  --border-color-error: #EAC9C9;
-  --background-error: #FCF3F3;
+  --color-error: #cd3b32;
+  --border-color-error: #eac9c9;
+  --background-error: #fcf3f3;
   --color-link: var(--color-error);
   margin-bottom: 2rem;
   color: var(--color-error);
@@ -1926,9 +1925,9 @@ details > summary .icon {
 }
 .warning,
 .message-warning {
-  --color-warning: #8B682D;
-  --border-color-warning: #E9D7B8;
-  --background-warning: #FFF2DE;
+  --color-warning: #8b682d;
+  --border-color-warning: #e9d7b8;
+  --background-warning: #fff2de;
   --color-link: var(--color-warning);
   margin-bottom: 2rem;
   color: var(--color-warning);
